--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 * {
     font-family: "Montserrat", sans-serif;
     color: white;
+    box-sizing: border-box;
 }
 
 body {
@@ -47,9 +48,8 @@ body {
     width: 250px;
     height: calc(100vh - 45px);
     box-sizing: border-box;
-    padding: 10px;
     text-decoration: none;
-    padding-top: 10px;
+    padding-top: 5px;
 }
 
 .rainbow {
@@ -105,11 +105,24 @@ p {
 .sidebar a {
     text-decoration: none;
     transition: 0.3s ease;
+    display: flex;
+    height: 50px;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    font-size: 18px;
+    background-color: rgba(67,67,67,0.0);
+    width: 100%;
+    padding-left: 10px;
+}
+.sidebar a img {
+    height: 35px;
+    border-radius: 5px;
 }
 
 .sidebar a:hover {
-    margin-left: 4px;
-    margin-right: 4px;
+    padding-left: 15px;
+    background-color: rgba(67,67,67,0.3);
     color: rgb(255, 249, 171);
 }
 
@@ -170,4 +183,28 @@ iframe {
     border:1px solid rgba(255, 255, 255, 0.18);
     width: calc(100% - 70px);
     max-width: 600px;
+}
+
+.cool-background {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(45deg, #121212, #1a1a1a, #2a2a2a, #222222);
+    background-size: 400% 400%;
+    animation: gradientAnimation 10s ease infinite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -3;
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
