--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,3 +208,38 @@ iframe {
         background-position: 0% 50%;
     }
 }
+
+.incognito-button {
+    position:fixed;
+    bottom: 10px;
+    right: 10px;
+    border-radius: 6px;
+    display: flex;
+    width: 50px;
+    height: 50px;
+    border:1px solid rgba(255, 255, 255, 0.18);
+    margin: 0;
+    padding: 0;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.incognito-button img {
+    margin: 0;
+    padding: 0;
+    fill: white;
+    width: 80%;
+}
+
+#incognito-window {
+    width: 300px;
+    height: 200px;
+    transition: 0.5s ease;
+    position: fixed;
+    bottom: 70px;
+    border-radius: 10px;
+    right: -300px;
+    opacity: 0;
+    border:1px solid rgba(255, 255, 255, 0.18);
+}
