--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,11 +8,18 @@ body {
     background-color: #151515;
     margin: 0;
     padding: 0;
+    position: relative;
+}
+
+.website-body {
+    display: flex;
+    flex-direction: row;
+    min-height: 100vh;
 }
 
 .header {
     height: 45px;
-    width:100vw;
+    max-width: 100vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -46,7 +53,7 @@ body {
 
 .sidebar {
     width: 250px;
-    height: calc(100vh - 45px);
+    min-height: calc(100% - 45px);
     box-sizing: border-box;
     text-decoration: none;
     padding-top: 5px;
@@ -69,11 +76,12 @@ body {
     100% { color: red; }
 }
 .content {
-    position: absolute;
     top: 40px;
     left: 250px;
-    width: calc(100vw - 250px);
-    height: calc(100vh - 40px);
+    margin: 0;
+    padding: 0;
+    width: calc(100% - 250px);
+    min-height: calc(100vh - 45px);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -149,11 +157,12 @@ button{
     margin-top: 20px;
 }
 
-.game-banner {
+.game-banner,
+.game-card {
     margin-top: 35px;
     border-radius: 10px;
-    height: 125px;
-    width: calc(100% - 70px);
+    min-height: 125px;
+    width: calc(100% - 40px);
     max-width: 600px;
     display:flex;
     justify-content: center;
@@ -162,7 +171,44 @@ button{
     position: relative;
 }
 
-.game-banner h1 {
+.game-card {
+    width: 100%;
+    height: 110px;
+    cursor: pointer;
+}
+
+.desc {
+    flex: 0;
+    max-height: 0px;
+    min-height: 90px;
+    overflow: hidden;
+    transition: 0.5s ease;
+    opacity: 0;
+}
+
+.game-carousel div:hover .desc {
+    flex: 1;
+    max-width: 90%;
+    max-height: 80%;
+    z-index: 3;
+    display: -webkit-box;          /* use flexbox-like layout for text */
+    -webkit-box-orient: vertical;  /* vertical flow */
+    -webkit-line-clamp: 3;         /* number of lines to show */
+    overflow: hidden;              /* hide the rest */
+    
+    /* optional for consistent look */
+    text-overflow: ellipsis; 
+    opacity: 1;
+}
+
+.game-carousel div:hover h1 {
+    width: 0;
+    overflow: hidden;
+    opacity: 0;
+}
+
+.game-banner h1,
+.game-carousel div h1 {
     margin: 0;
     color: white;
     text-shadow:
@@ -171,34 +217,71 @@ button{
     -2px  2px 0 black,
      2px  2px 0 black;
      z-index: 2;
+     transition: 0.5s ease;
+     opacity: 1;
 }
 
-.game-banner img{
+.game-banner img,
+.game-carousel div img{
     min-height: 100%;
     width: 100%;
     position: absolute;
-    z-index: 1
+    z-index: 1;
+    opacity: 0.5;
+}
+
+.game {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: calc(100% - 300px);
+    margin: 20px;
+    margin-bottom: 0px;
+}
+
+.ad {
+    background-color: red;
+}
+
+.horizontal {
+    display: none;
+    width: 100%;
+    max-width: 600px;
+    height: 100px;
+}
+
+.desktop {
+    display: block;
+    width: 100%;
+    max-width: 600px;
+    height: 100px;
+    margin-top: 15px;
+}
+
+.vertical {
+    min-width: 120px;
+    height: 350px;
 }
 
 iframe {
-    margin: 20px;
-    width: calc(100% - 70px);
-    max-width: 800px;
-    aspect-ratio: 16 / 9;
     border-radius: 8px;
+    margin-right: 15px;
+    margin-left: 15px;
+    max-width: 600px;
+    aspect-ratio: 16 / 9;
 }
 
 .game-description {
     padding: 12px;
     border-radius: 10px;
     border:1px solid rgba(255, 255, 255, 0.18);
-    width: calc(100% - 70px);
+    width: calc(100% - 40px);
     max-width: 600px;
 }
 
 .cool-background {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: linear-gradient(45deg, #121212, #1a1a1a, #2a2a2a, #222222);
     background-size: 400% 400%;
     animation: gradientAnimation 10s ease infinite;
@@ -268,5 +351,41 @@ iframe {
 #incognito-window button {
     font-size: 16px;
     padding: 7px;
+    cursor: pointer;
+}
+
+.explorecontainer {
+    width: 90%;
+    display: flex;
+    gap: 20px;
+}
+
+.explorecontainer .explore {
+    flex: 1;
+}
+
+.header-h1 {
+    font-size: 50px;
+}
+
+#popup-ad {
+    position: fixed;
+    top:0;
+    left:0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index:9999;
+    width: 100vw;
+    min-height: 100vh;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+}
+
+.popup-x {
+    position: fixed;
+    top: 5px;
+    right: 5px;
+    padding: 5px;
     cursor: pointer;
 }
