--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,6 +158,7 @@ button{
     margin-top: 20px;
 }
 
+
 .game-banner,
 .game-card,
 .game-icon {
@@ -171,6 +172,31 @@ button{
     align-items: center;
     overflow: hidden;
     position: relative;
+}
+
+.article p {
+    margin: 8px;
+    text-align: left;
+}
+
+.article {
+    text-align: left;
+    padding-left: 10%;
+}
+
+h2 {
+    margin: 10px;
+    text-align: left;
+}
+
+.article h1{
+    margin-bottom: 10px;
+}
+
+.gform {
+    height: 500px !important;
+    overflow: hidden !important;
+    border:0;
 }
 
 .game-icon {
